--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 h1:hover{
 border: 3px double red;
 background-color:red;}
+img{
+  height: 100%;
+  width: 100%;
+}
+.container{
+  height: fit-content;
+  margin: 0 auto;
+}
