--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+:root{
+  box-sizing: border-box;
+}
+*,
+::before,
+::after{
+  box-sizing: inherit;
+  background-color: #ccc;
+  font-family: cursive;
+}
+body{
+  text-align: center;
+}
 h1:hover{
 border: 3px double red;
 background-color:red;}
@@ -5,7 +18,8 @@ img{
   height: 100%;
   width: 100%;
 }
-.container{
+.container {
   height: fit-content;
   margin: 0 auto;
+  border: 1em solid blueviolet;
 }
